--- a/packages/demo-cli/package.json
+++ b/packages/demo-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-cli",
+  "name": "@a0-events/demo-cli",
   "version": "1.0.0",
   "description": "Demo of a CLI receiving real-time session chang events",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "Sandrino Di Mattia",
   "license": "MIT",
   "dependencies": {
+    "@a0-events/sdk-node": "^1.0.0",
     "auth0": "^2.32.0",
     "dotenv": "^8.2.0",
     "pino": "^6.11.0",
