--- a/packages/demo-nextjs/package.json
+++ b/packages/demo-nextjs/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@a0-events/sdk-react": "^1.0.0",
     "@auth0/auth0-react": "^1.2.0",
     "next": "^10.0.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-use-websocket": "^2.4.0"
+    "react-dom": "^17.0.1"
   }
 }
