--- a/packages/demo-nextjs/package.json
+++ b/packages/demo-nextjs/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@a0-events/sdk-react": "^1.0.0",
     "@auth0/auth0-react": "^1.2.0",
+    "autoprefixer": "^10.2.3",
     "next": "^10.0.5",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^2.0.2"
   }
 }
