--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "lerna run build"
+    "cf:build": "lerna run build",
+    "demo-api:start": "lerna run start --stream --scope=@a0-events/demo-api",
+    "heroku-postbuild": "lerna bootstrap && yarn install"
   },
   "workspaces": [
     "packages/*"
