feat: call api from next app

--- a/packages/demo-api/.env-template
+++ b/packages/demo-api/.env-template
@@ -2,4 +2,4 @@ AUTH0_EVENTS_DOMAIN=events.auth0a.com/my-tenant
 AUTH0_DOMAIN=my-tenant.auth0.com
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
-AUTH0_API_IDENTIFIER=https://timesheets-api.herokuapp.com/
+AUTH0_API_IDENTIFIER=https://timesheets-api.herokuapp.com/api
