--- a/packages/demo-nextjs/.env-template
+++ b/packages/demo-nextjs/.env-template
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_DOMAIN=your-domain.us.auth0.com
 NEXT_PUBLIC_CLIENT_ID=
-NEXT_PUBLIC_AUDIENCE=https://events.auth0a.com/api
 NEXT_PUBLIC_AUTH0_EVENTS_DOMAIN=events.auth0a.com/your-domain@us
+NEXT_PUBLIC_AUDIENCE=https://timesheets-api.herokuapp.com/api
+NEXT_PUBLIC_API_BASE_URL=https://timesheets-api.herokuapp.com/api
