--- a/packages/demo-nextjs/package.json
+++ b/packages/demo-nextjs/package.json
@@ -14,6 +14,7 @@
     "next": "^10.0.5",
     "postcss": "^8.2.4",
     "react": "^17.0.1",
+    "react-async": "^10.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
   }
